<?xml version="1.0"?>
<package format="3">
  <name>drone_msgs</name>
  <version>1.0.0</version>
  <description>Custom ROS2 message types for the VTP drone telemetry and command system</description>
  <maintainer email="dev@vtp.vn">VTP Robotics</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>builtin_interfaces</depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
