<?xml version="1.0"?>
<package format="3">
  <name>telemetry_node</name>
  <version>1.0.0</version>
  <description>Subscribes to PX4 DDS topics and publishes structured drone_msgs to ROS2 internal topics</description>
  <maintainer email="dev@vtp.vn">VTP Robotics</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>px4_msgs</depend>
  <depend>std_msgs</depend>
  <depend>drone_msgs</depend>
  <depend>builtin_interfaces</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
